--- a/style.css
+++ b/style.css
@@ -33,20 +33,15 @@ img{
   #home {
       
       height: 100vh;
-      background: url(background.jpg)  center center fixed;
-      background-size: cover;
-     
-      flex-wrap: wrap;
+      background-color: #1e1e1f;
       
   }
   
   
   .textlg{
-      font-family: Arial, Helvetica, sans-serif;
-      color: #a3492b;
       font-size: 30px;
       font-family: 'Amiri', serif;
-
+    color: aliceblue;
   }
   .rowheight1{
       height: 200px;
@@ -68,3 +63,4 @@ img{
         width: 100%;
     }
 }
+
