--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@ a{
     font-family: 'Amiri', serif;
     font-size: 25px;
 }
-a:hover{
-    text-decoration: underline;
-}
-img{
+
+.img-fluid{
     height: 200px;
     width: 200px;
     border-radius: 50%;
     border: 2px solid rgb(230, 221, 214);
     margin-top: 15px;
+}
+.card-img-top
+{
+    height: 200px;
+    
 }
 .zoom:hover{
     transform: scale(1.1);
@@ -184,3 +187,14 @@ img{
     left: 0;
     right: -55.8px;
 }
+.inner{
+    overflow: hidden;
+}
+.inner img{
+    transition: all 2.0s ease;
+}
+.inner:hover img{
+    transform: scale(1.2);
+}
+
+  
